2025/kubernetes/customer-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customer-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
    - image: $ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/customer
      name: customer
      ports:
        - containerPort: 8080
          protocol: TCP
