2025/kubernetes/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: customer
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: customer
