2025/kubernetes/customer-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: customer-loadbalancer
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: customer
