2025/kubernetes/coffee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: employee
                port:
                  number: 8081
